<resources>
    <string name="app_name"> Calculator </string>
    <string name="zero"> 0 </string>
    <string name="one"> 1 </string>
    <string name="two"> 2 </string>
    <string name="three"> 3 </string>
    <string name="four"> 4 </string>
    <string name="five"> 5 </string>
    <string name="six"> 6 </string>
    <string name="seven"> 7 </string>
    <string name="eight"> 8 </string>
    <string name="nine"> 9 </string>
    <string name="backspace"> delete </string>
    <string name="AC"> AC </string>
    <string name="modulus"> % </string>
    <string name="divide"> &#247; </string>
    <string name="mutiply"> &#215; </string>
    <string name="plus"> &#43; </string>
    <string name="negatif"> &#8722; </string>
    <string name="point"> &#8729; </string>
    <string name="equals"> &#61; </string>
    <string name="factorial"> x! </string>
    <string name="display"> </string>

</resources>