<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:exported="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="363dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/background" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        tools:layout_editor_absoluteX="4dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="deleteButton"
                android:text="@string/AC"
                android:textColor="@color/blue"
                android:textSize="24sp" />

            <Button
                android:id="@+id/modulusButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="modulusButton"
                android:text="@string/modulus"
                android:textColor="@color/blue"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/backSpaceButton"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:elevation="3dp"
                android:onClick="backspaceButton"
                app:srcCompat="@drawable/ic_baseline_backspace_24" />

            <Button
                android:id="@+id/divideButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="divideButton"
                android:text="@string/divide"
                android:textColor="@color/orange"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:inputType="numberDecimal|numberSigned|number"
                android:onClick="sevenButton"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="24sp" />

            />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="eightButton"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="nineButton"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="mutiplyButton"
                android:text="@string/mutiply"
                android:textColor="@color/orange"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="fourButton"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="fiveButton"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="sixButton"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/negatifButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="negatifButton"
                android:text="@string/negatif"
                android:textColor="@color/orange"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="oneButton"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="twoButton"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="threeButton"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="plusButton"
                android:text="@string/plus"
                android:textColor="@color/orange"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/tripleZeroButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="factorialButton"
                android:text="@string/factorial"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="zeroButton"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pointButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="pointButton"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:onClick="equalsButton"
                android:text="@string/equals"
                android:textColor="@color/orange"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        />

    <TextView
        android:id="@+id/displayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

</androidx.constraintlayout.widget.ConstraintLayout>